--- a/public/installation/wifi/index.print.html
+++ b/public/installation/wifi/index.print.html
@@ -9,7 +9,7 @@
 要配置无线网卡，你需要先连上网线，或者接上显示器和键盘。 如果是已连上有线网络，那么在浏览器打开http://homeassistant.local:7681/ （或者用ip访问，比如http://192.168.3.209:7681/ ，请使用你HA Box实际的ip地址替换192.168.3.209），打开后你将看到如下界面
 当然，如果你没有连有线网络，但是接连显示器和键盘，同样在显示器上你也将看到类似的界面。
 在ha&gt;提示符下输入“login”然后回车，进入root模式下。">
-    <meta name="author" content="Sören Weber">
+    <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://localhost:1313/images/hero.png">
     <meta name="twitter:title" content=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站">
@@ -39,18 +39,18 @@
     <link href="http://localhost:1313/installation/wifi/index.html" rel="canonical" type="text/html" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站">
     <link href="../../installation/wifi/index.xml" rel="alternate" type="application/rss+xml" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760958" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760958" rel="stylesheet">
-    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1724760958" rel="stylesheet">
-    <script src="../../js/variant.js?1724760958"></script>
+    <link href="../../css/fontawesome-all.min.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724761155" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724761155" rel="stylesheet">
+    <link href="../../css/fonts.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724761155" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724761155" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724761155" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724761155" rel="stylesheet">
+    <link href="../../css/print.css?1724761155" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1724761155" rel="stylesheet">
+    <script src="../../js/variant.js?1724761155"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -108,14 +108,14 @@
 <h1 id="给ha-box插上无线wifi的翅膀"> 给HA Box插上无线WIFI的翅膀</h1>
 
 <p>由于我们选用的HA Box盒子是基于M401A,UNT403A,CM311-1A，都没有带无线模块，因此我们采购了一些USB无线网卡802.11n，该网卡可以在HA Box下使用。</p>
-<p><a href="#R-image-3b41226152951c30dc974ba6cd1ca3c7" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3b41226152951c30dc974ba6cd1ca3c7"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg"></a></p>
-<p><a href="#R-image-5346eb37db3f7ffe074a78aa5a4abbd8" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/71942a02d4e244aea0a832152b7a297e4b7e8c4a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5346eb37db3f7ffe074a78aa5a4abbd8"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/71942a02d4e244aea0a832152b7a297e4b7e8c4a.jpeg"></a></p>
+<p><a href="#R-image-39bc642e14358c81f9cd8c4c008fde71" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-39bc642e14358c81f9cd8c4c008fde71"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg"></a></p>
+<p><a href="#R-image-a7a1fe815df7abd3686520f2bcb51592" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/71942a02d4e244aea0a832152b7a297e4b7e8c4a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a7a1fe815df7abd3686520f2bcb51592"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/71942a02d4e244aea0a832152b7a297e4b7e8c4a.jpeg"></a></p>
 <p>要配置无线网卡，你需要先连上网线，或者接上显示器和键盘。
 如果是已连上有线网络，那么在浏览器打开http://homeassistant.local:7681/ （或者用ip访问，比如http://192.168.3.209:7681/ ，请使用你HA Box实际的ip地址替换192.168.3.209），打开后你将看到如下界面</p>
-<p><a href="#R-image-5cc2e1d8a697ad94100a7db818836986" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/80151f8634398af9174d5c9dee81e241ef822a68_2_690x310.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5cc2e1d8a697ad94100a7db818836986"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/80151f8634398af9174d5c9dee81e241ef822a68_2_690x310.jpeg"></a></p>
+<p><a href="#R-image-d746d0a7b138ad7f0d60d3cf45595f76" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/80151f8634398af9174d5c9dee81e241ef822a68_2_690x310.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d746d0a7b138ad7f0d60d3cf45595f76"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/80151f8634398af9174d5c9dee81e241ef822a68_2_690x310.jpeg"></a></p>
 <p>当然，如果你没有连有线网络，但是接连显示器和键盘，同样在显示器上你也将看到类似的界面。</p>
 <p>在ha&gt;提示符下输入“<strong>login</strong>”然后回车，进入root模式下。</p>
 <p>输入 “<strong>ip a</strong>”回车，你将会发现有如下的网卡信息，这就是刚插上的无线网卡了</p>
@@ -126,8 +126,8 @@
 在#提示符下（root模式）输入：
 <strong><code>nmcli device wifi</code></strong>
 然后回车，将看到能扫描到的wifi信号
-<a href="#R-image-9c92b2926729bdba0cbc518d81cfe3b1" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/9acd43c46494811129589ab7a0e8e74e7fc38867.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c92b2926729bdba0cbc518d81cfe3b1"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/9acd43c46494811129589ab7a0e8e74e7fc38867.jpeg"></a></p>
+<a href="#R-image-aaadd7dfc1b0876758fd648a35a106b6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/9acd43c46494811129589ab7a0e8e74e7fc38867.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-aaadd7dfc1b0876758fd648a35a106b6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/9acd43c46494811129589ab7a0e8e74e7fc38867.jpeg"></a></p>
 <p>连接wifi的命令如下：</p>
 <div class="highlight wrap-code"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-perl" data-lang="perl"><span style="display:flex;"><span>nmcli device wifi connect <span style="color:#e6db74">&#34;YOUR_SSID&#34;</span> password <span style="color:#e6db74">&#34;YOUR_WIFI_PASSWORD&#34;</span></span></span></code></pre></div><p>当你看到返回下面的信息时，说明连接成功连。需要注意的是该网卡只支持2.4G频段的wifi信号，如果你家wifi没有支持2.4G频段的信号，将连接失败。</p>
 <blockquote>
@@ -152,8 +152,8 @@ valid_lft forever preferred_lft forever</p>
 <blockquote>
 <p>http://192.168.3.210:8123/onboarding.html</p>
 </blockquote>
-<p><a href="#R-image-a686e2978519e59897fcd18d366f9af2" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134_2_596x499.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a686e2978519e59897fcd18d366f9af2"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134_2_596x499.jpeg"></a></p>
+<p><a href="#R-image-1970067825854b40d2cdb9cf224e18e8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134_2_596x499.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1970067825854b40d2cdb9cf224e18e8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134_2_596x499.jpeg"></a></p>
 
             <footer class="footline">
             </footer>
@@ -162,8 +162,8 @@ valid_lft forever preferred_lft forever</p>
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1724760958" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
-    <script src="../../js/theme.js?1724760958" defer></script>
+    <script src="../../js/clipboard.min.js?1724761155" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724761155" defer></script>
+    <script src="../../js/theme.js?1724761155" defer></script>
   </body>
 </html>
