--- a/public/network/habox-over-greatwall/index.html
+++ b/public/network/habox-over-greatwall/index.html
@@ -13,7 +13,7 @@
 导入节点
 然后，选择，启动
 此时，应该就可以用了。开个窗口测试一下 http://homeassistant.local:7681/ 进入后输入login 回车 输入curl www.">
-    <meta name="author" content="Sören Weber">
+    <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://localhost:1313/images/hero.png">
     <meta name="twitter:title" content="Ha盒子配置科学上网 :: HaBox 技术支持站">
@@ -55,17 +55,17 @@
     <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../network/habox-over-greatwall/index.print.html" rel="alternate" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760958" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760958" rel="stylesheet">
-    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1724760958"></script>
+    <link href="../../css/fontawesome-all.min.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724761155" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724761155" rel="stylesheet">
+    <link href="../../css/fonts.css?1724761155" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724761155" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724761155" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724761155" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724761155" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724761155" rel="stylesheet">
+    <link href="../../css/print.css?1724761155" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1724761155"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -143,25 +143,25 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="http://localhost:1313/network/free-vless-node/" rel="external" target="_self" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-5910f4a03d940cc8108318ab22c15210" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5910f4a03d940cc8108318ab22c15210"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png"></a></p>
+<p><a href="#R-image-b6013f3773adba1ec29d56d462878266" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b6013f3773adba1ec29d56d462878266"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-3bad3a48b85eb80c0f0c696482256891" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bad3a48b85eb80c0f0c696482256891"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png"></a></p>
+<p><a href="#R-image-7250c977663c61a7df17954673370586" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7250c977663c61a7df17954673370586"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-c310c5b59d26c3cfab7eba1fa7f672ca" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c310c5b59d26c3cfab7eba1fa7f672ca"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png"></a></p>
+<p><a href="#R-image-42d39817ef1f1aaab328dc838679af9e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-42d39817ef1f1aaab328dc838679af9e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-0b49ac5e706a39b63a1e9ea21f2d6975" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0b49ac5e706a39b63a1e9ea21f2d6975"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png"></a></p>
+<p><a href="#R-image-18f7ff5af4a889b9544a53d66168e88e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-18f7ff5af4a889b9544a53d66168e88e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-6cd1674163f5308233a08eef5cd8a091" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6cd1674163f5308233a08eef5cd8a091"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg"></a></p>
+<p><a href="#R-image-c12df7bbe3d02602bcc5559df4ec2f36" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c12df7bbe3d02602bcc5559df4ec2f36"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想。</p>
@@ -236,13 +236,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1724760958" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1724760958" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1724760958" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1724760958" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1724760958" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1724760958" defer></script>
-        <script src="../../js/search.js?1724760958" defer></script>
+        <script src="../../js/auto-complete.js?1724761155" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1724761155" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1724761155" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1724761155" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1724761155" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1724761155" defer></script>
+        <script src="../../js/search.js?1724761155" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -326,8 +326,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1724760958" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
-    <script src="../../js/theme.js?1724760958" defer></script>
+    <script src="../../js/clipboard.min.js?1724761155" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724761155" defer></script>
+    <script src="../../js/theme.js?1724761155" defer></script>
   </body>
 </html>
