--- a/public/network/habox-over-greatwall/index.html
+++ b/public/network/habox-over-greatwall/index.html
@@ -35,17 +35,17 @@
     <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../network/habox-over-greatwall/index.print.html" rel="alternate" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725502867" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725502867" rel="stylesheet">
-    <link href="../../css/fonts.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725502867" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725502867" rel="stylesheet">
-    <link href="../../css/print.css?1725502867" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725502867"></script>
+    <link href="../../css/fontawesome-all.min.css?1725503165" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725503165" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725503165" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725503165" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725503165" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725503165" rel="stylesheet">
+    <link href="../../css/fonts.css?1725503165" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725503165" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725503165" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725503165" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725503165" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725503165" rel="stylesheet">
+    <link href="../../css/print.css?1725503165" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725503165"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -121,27 +121,27 @@
 <h1 id="ha盒子配置科学上网">Ha盒子配置科学上网</h1>
 
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
-<p><a href="http://localhost:1313/network/free-vless-node/" rel="external" target="_self" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
+<p><a href="../../network/free-vless-node/index.html" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-f5de0b074f2425f4c768fcc852c64e6e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f5de0b074f2425f4c768fcc852c64e6e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
+<p><a href="#R-image-71e131b8ff6a56820488d224e5090af0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-71e131b8ff6a56820488d224e5090af0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-d13daa1294a59437570a5b102817f2b8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d13daa1294a59437570a5b102817f2b8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
+<p><a href="#R-image-455c337efd7577e78d4204e04e22103f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-455c337efd7577e78d4204e04e22103f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-e63f5fe72b0bf1be5b3d93567b19efb4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e63f5fe72b0bf1be5b3d93567b19efb4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
+<p><a href="#R-image-fe758d35d08b8ff6f135266810a21a95" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fe758d35d08b8ff6f135266810a21a95"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-6fb1c001d5d88028d0d932d7646c8be5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6fb1c001d5d88028d0d932d7646c8be5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
+<p><a href="#R-image-1625c48fe38f4ff544751bf1f400aaa6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1625c48fe38f4ff544751bf1f400aaa6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-0408e7acbcd80125e975862db11427ab" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0408e7acbcd80125e975862db11427ab"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
+<p><a href="#R-image-23c14e002b02784cb8c2356228a695b8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-23c14e002b02784cb8c2356228a695b8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想，实现上网自由。</p>
@@ -216,13 +216,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725502867" defer></script>
-        <script src="../../js/search.js?1725502867" defer></script>
+        <script src="../../js/auto-complete.js?1725503165" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725503165" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725503165" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725503165" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725503165" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725503165" defer></script>
+        <script src="../../js/search.js?1725503165" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -306,8 +306,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725502867" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725502867" defer></script>
-    <script src="../../js/theme.js?1725502867" defer></script>
+    <script src="../../js/clipboard.min.js?1725503165" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725503165" defer></script>
+    <script src="../../js/theme.js?1725503165" defer></script>
   </body>
 </html>
