--- a/public/installation/wifi/index.print.html
+++ b/public/installation/wifi/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/wifi/index.html" rel="canonical" type="text/html" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站">
     <link href="../../installation/wifi/index.xml" rel="alternate" type="application/rss+xml" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725502867" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725502867" rel="stylesheet">
-    <link href="../../css/fonts.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725502867" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725502867" rel="stylesheet">
-    <link href="../../css/print.css?1725502867" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725502867" rel="stylesheet">
-    <script src="../../js/variant.js?1725502867"></script>
+    <link href="../../css/fontawesome-all.min.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725503859" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725503859" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725503859" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725503859" rel="stylesheet">
+    <link href="../../css/fonts.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725503859" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725503859" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725503859" rel="stylesheet">
+    <link href="../../css/print.css?1725503859" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725503859" rel="stylesheet">
+    <script src="../../js/variant.js?1725503859"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -96,12 +96,12 @@
 <h1 id="给ha-box插上无线wifi的翅膀"> 给HA Box插上无线WIFI的翅膀</h1>
 
 <p>由于我们选用的HA Box盒子是基于M401A,UNT403A,CM311-1A，都没有带无线模块，因此我们采购了一些USB无线网卡802.11n，该网卡可以在HA Box下使用。</p>
-<p><a href="#R-image-8852f53cf59aebb801b4101de4deef3b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8852f53cf59aebb801b4101de4deef3b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/f45429c03828801ccbd43f1dc3a847c7b7ff2fac.jpeg"></a></p>
+<p><a href="#R-image-3f86eed47cf78acf981c771b59a5471a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3f86eed47cf78acf981c771b59a5471a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg"></a></p>
 <p>要配置无线网卡，你需要先连上网线，或者接上显示器和键盘。
 如果是已连上有线网络，那么在浏览器打开http://homeassistant.local:7681/ （或者用ip访问，比如http://192.168.3.209:7681/ ，请使用你HA Box实际的ip地址替换192.168.3.209），打开后你将看到如下界面</p>
-<p><a href="#R-image-9c430d16e23051703c6c29b1828936c0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c430d16e23051703c6c29b1828936c0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
+<p><a href="#R-image-ecc20b437dee78a860a5c7e76cc24dc1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ecc20b437dee78a860a5c7e76cc24dc1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
 <p>当然，如果你没有连有线网络，但是接连显示器和键盘，同样在显示器上你也将看到类似的界面。</p>
 <p>在ha&gt;提示符下输入“<strong>login</strong>”然后回车，进入root模式下。</p>
 <p>输入 “<strong>ip a</strong>”回车，你将会发现有如下的网卡信息，这就是刚插上的无线网卡了</p>
@@ -112,8 +112,8 @@
 在#提示符下（root模式）输入：
 <strong><code>nmcli device wifi</code></strong>
 然后回车，将看到能扫描到的wifi信号
-<a href="#R-image-daf3b421a6126ea2c149f08d8593bc0c" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-daf3b421a6126ea2c149f08d8593bc0c"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
+<a href="#R-image-125c0836b8f95787577097ec788d2403" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-125c0836b8f95787577097ec788d2403"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
 <p>连接wifi的命令如下：</p>
 <div class="highlight wrap-code"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-perl" data-lang="perl"><span style="display:flex;"><span>nmcli device wifi connect <span style="color:#e6db74">&#34;YOUR_SSID&#34;</span> password <span style="color:#e6db74">&#34;YOUR_WIFI_PASSWORD&#34;</span></span></span></code></pre></div><p>当你看到返回下面的信息时，说明连接成功连。需要注意的是该网卡只支持2.4G频段的wifi信号，如果你家wifi没有支持2.4G频段的信号，将连接失败。</p>
 <blockquote>
@@ -138,8 +138,8 @@ valid_lft forever preferred_lft forever</p>
 <blockquote>
 <p>http://192.168.3.210:8123/onboarding.html</p>
 </blockquote>
-<p><a href="#R-image-9931ac62e9bded871c6797bbbcd4fd48" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9931ac62e9bded871c6797bbbcd4fd48"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
+<p><a href="#R-image-609f717e25128d6c5fd266a6bbadb725" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-609f717e25128d6c5fd266a6bbadb725"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
 
             <footer class="footline">
             </footer>
@@ -148,8 +148,8 @@ valid_lft forever preferred_lft forever</p>
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725502868" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725502868" defer></script>
-    <script src="../../js/theme.js?1725502868" defer></script>
+    <script src="../../js/clipboard.min.js?1725503859" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725503859" defer></script>
+    <script src="../../js/theme.js?1725503859" defer></script>
   </body>
 </html>
