--- a/public/installation/hacs/index.print.html
+++ b/public/installation/hacs/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/hacs/index.html" rel="canonical" type="text/html" title="HACS安装激活 :: HaBox 技术支持站">
     <link href="../../installation/hacs/index.xml" rel="alternate" type="application/rss+xml" title="HACS安装激活 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
-    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725508239" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725508239" rel="stylesheet">
-    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725508239" rel="stylesheet">
-    <script src="../../js/variant.js?1725508239"></script>
+    <link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725516187" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725516187" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725516187" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725516187" rel="stylesheet">
+    <link href="../../css/fonts.css?1725516187" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725516187" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725516187" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725516187" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725516187" rel="stylesheet">
+    <link href="../../css/print.css?1725516187" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725516187" rel="stylesheet">
+    <script src="../../js/variant.js?1725516187"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -57,6 +57,9 @@
       window.T_No_results_found = `找不到"{0}"的结果`;
       window.T_N_results_found = `为"{0}"找到 {1} 个结果`;
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support print disableInlineCopyToClipboard" data-url="../../installation/hacs/index.html">
     <div id="R-body" class="default-animation">
@@ -101,35 +104,35 @@
 <h2 id="二安装hacs">二、安装HACS</h2>
 <p>由于Homeassistant的安装五花八门，所以网上有很多教程看上去非常复杂，但是在HA Box中安装HACS非常简单，下面我们一起来看看怎么安装。</p>
 <p>配置 - 设备与服务 ，在集成选项卡右下角点<strong>添加集成</strong>按钮</p>
-<p><a href="#R-image-91a171a5d99cec3ca06b43e155eee3f5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-91a171a5d99cec3ca06b43e155eee3f5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
-<p><a href="#R-image-be3ba3892d94596f57813201747d5032" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-be3ba3892d94596f57813201747d5032"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
+<p><a href="#R-image-f3206b8a5e9d72869e1622f556697cf4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f3206b8a5e9d72869e1622f556697cf4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
+<p><a href="#R-image-45f339162d092d70e8b73dba57d7c082" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-45f339162d092d70e8b73dba57d7c082"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
 <p>在弹出窗口搜索HACS，你将看到HACS已经在列表里，然后点击它（整行随便点就行，右边的几个图标只是告诉你HACS的一些功能）</p>
-<p><a href="#R-image-1ebcdbcab17b8a200e43b56ccedd4788" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1ebcdbcab17b8a200e43b56ccedd4788"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
+<p><a href="#R-image-186e7f0b01b748f81f7de6d6b68b44c0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-186e7f0b01b748f81f7de6d6b68b44c0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
 <p>全勾选上，然后提交</p>
-<p><a href="#R-image-ed920cf2328c39268b5fcd4e05b52cfd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ed920cf2328c39268b5fcd4e05b52cfd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
+<p><a href="#R-image-ffdac8e54c6a53f0d512e2a032681a13" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ffdac8e54c6a53f0d512e2a032681a13"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
 <p>接下来是打开链接，进到github.com有个授权的动作</p>
-<p><a href="#R-image-1bcc6f4351bcee51b8876a209d59b196" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1bcc6f4351bcee51b8876a209d59b196"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
+<p><a href="#R-image-7376c42115509228c81c1a24c3fdb0a7" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7376c42115509228c81c1a24c3fdb0a7"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
 <p>不出以外的话，你将看到这个页面，复制刚才弹窗给你的验证码，直接鼠标全选上复制过去直接粘贴，然后点 Continue 继续</p>
-<p><a href="#R-image-3659e737724aa662b2382b2a65f35a95" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3659e737724aa662b2382b2a65f35a95"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
+<p><a href="#R-image-d9409389d14a0f4af2484c6af9d6d876" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d9409389d14a0f4af2484c6af9d6d876"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
 <p>有时候会因为种种原因出现下面这个弹窗提示<strong>cloud_not_register</strong>,网络问题直接关闭从头再来多试几次</p>
 <p>如果出现下面这个页面说明你刚才的验证码没输错，可以点击Authorize hacs授权了</p>
-<p><a href="#R-image-515dfba80d9aa8422e5aaf5852152097" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-515dfba80d9aa8422e5aaf5852152097"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
+<p><a href="#R-image-6ea8aa4cd96374a4ed6fe7db4cc074a6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6ea8aa4cd96374a4ed6fe7db4cc074a6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
 <p>OK,到这里说明已经配置成功了，可以关闭这个页面了。</p>
-<p><a href="#R-image-57ac082dbdabfd54f7de21803291298f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-57ac082dbdabfd54f7de21803291298f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
+<p><a href="#R-image-2a140c1f0e65a1893be985016634871d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2a140c1f0e65a1893be985016634871d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
 <p>返回到Homeassistant,HACS已经配置成功，并自动发现了家里的一些设备，可以对区域进行配置，告诉HACS这个设备是在客厅还是在卧室或者别的房间。当然你也可以直接点关闭或完成。</p>
-<p><a href="#R-image-a5e7352385b8c9669fae8e81524af5a6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5e7352385b8c9669fae8e81524af5a6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
+<p><a href="#R-image-ce75254e6d152d5e1f47eeae46419c15" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ce75254e6d152d5e1f47eeae46419c15"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
 <p>看，左侧已经出现HACS的连接，集成里面已配置列表已经有HACS了。</p>
-<p><a href="#R-image-eebf6bf88a9e3cde18d9f7f5f2a5ca46" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-eebf6bf88a9e3cde18d9f7f5f2a5ca46"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
+<p><a href="#R-image-b39a93915d6688aa859d37d21c525ef3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b39a93915d6688aa859d37d21c525ef3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
 <p>此时你可能需要重启一下HA Box缓解一下激动的心情了</p>
 
             <footer class="footline">
@@ -139,8 +142,8 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725508239" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
-    <script src="../../js/theme.js?1725508239" defer></script>
+    <script src="../../js/clipboard.min.js?1725516187" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725516187" defer></script>
+    <script src="../../js/theme.js?1725516187" defer></script>
   </body>
 </html>
