--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,17 @@
     <link href="./index.xml" rel="alternate" type="application/rss+xml" title="Hugo Relearn Theme :: HaBox 技术支持站">
     <link href="./index.print.html" rel="alternate" type="text/html" title="Hugo Relearn Theme :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1725508239" rel="stylesheet">
-    <link href="./css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
-    <link href="./css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725508239" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1725508239" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1725508239" rel="stylesheet">
-    <link href="./css/print.css?1725508239" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1725508239"></script>
+    <link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725523036" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1725523036" rel="stylesheet">
+    <link href="./css/auto-complete.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725523036" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1725523036" rel="stylesheet">
+    <link href="./css/fonts.css?1725523036" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725523036" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1725523036" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1725523036" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1725523036" rel="stylesheet">
+    <link href="./css/print.css?1725523036" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1725523036"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -55,6 +55,9 @@
       window.T_No_results_found = `找不到"{0}"的结果`;
       window.T_N_results_found = `为"{0}"找到 {1} 个结果`;
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
+
   </head>
   <body class="mobile-support html disableInlineCopyToClipboard" data-url="./index.html">
     <div id="R-body" class="default-animation">
@@ -176,13 +179,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1725508239" defer></script>
-        <script src="./js/lunr/lunr.min.js?1725508239" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1725508239" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1725508239" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1725508239" defer></script>
-        <script src="./js/search.js?1725508239" defer></script>
+        <script src="./js/auto-complete.js?1725523036" defer></script>
+        <script src="./js/lunr/lunr.min.js?1725523036" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1725523036" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1725523036" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1725523036" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1725523036" defer></script>
+        <script src="./js/search.js?1725523036" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -268,8 +271,8 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1725508239" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1725508239" defer></script>
-    <script src="./js/theme.js?1725508239" defer></script>
+    <script src="./js/clipboard.min.js?1725523036" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1725523036" defer></script>
+    <script src="./js/theme.js?1725523036" defer></script>
   </body>
 </html>
